--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/react.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>template</title>
-    <script defer type="module" src="/src/main.tsx"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/react.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>template</title>
+		<script defer type="module" src="/src/main.tsx"></script>
+	</head>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
