--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>template</title>
+		<meta
+			name="description"
+			content="template para crear una app con react."
+		/>
+		<meta
+			name="keywords"
+			content="template, react, proyecto web"
+		/>
+		<meta name="author" content="edarcode" />
+		<title>template edarcode</title>
+		<link
+			rel="preload"
+			href="/fonts/Nunito-Sans.woff"
+			as="font"
+			type="font/woff2"
+			crossorigin="anonymous"
+		/>
+		<link
+			rel="preload"
+			href="/fonts/Poppins-Regular.woff"
+			as="font"
+			type="font/woff2"
+			crossorigin="anonymous"
+		/>
+
 		<script defer type="module" src="/src/main.tsx"></script>
 	</head>
 	<body>
